AC_PREREQ(2.52)
AC_INIT(gaku, 0.1, http://o-hand.com)
AC_CONFIG_SRCDIR(audio-player.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

AM_DISABLE_STATIC
AC_PROG_CPP
AC_PROG_CC

PKG_CHECK_MODULES(DEPS, gtk+-2.0 gstreamer-0.10)

GLIB_GENMARSHAL=`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`  
AC_SUBST(GLIB_GENMARSHAL)

AC_OUTPUT([Makefile])
